--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "cross-env DB_ENV=development nodemon index.js",
+    "test": "cross-env DB_ENV=testing jest --watchAll",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.2",
     "knex-cleaner": "^1.3.0",
+    "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sqlite3": "^4.1.0"
   },
